<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_chat_gest</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wu001210@umn.edu">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>
  <depend>tensorflow</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
